--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -338,18 +338,39 @@ body {
   }
 }
 
-.page__taxonomy-item {
-  display: inline-block;
+.page__taxonomy-item-tag {
+  display: inside;
   margin-right: 5px;
   margin-bottom: 8px;
-  padding: 5px 10px;
+  padding: 3px 8px;
   text-decoration: none;
-  border: 1px solid mix(#000, $border-color, 25%);
+  border: 1px solid $background-color;
   border-radius: $border-radius;
+  background-color: #4D5357;
+  font-family: $sans-serif;
+  color: #FAFAFA;
 
   &:hover {
     text-decoration: none;
-    color: $link-color-hover;
+    color: mix(#848484, #FAFAFA, 20%);
+  }
+}
+
+.page__taxonomy-item-category {
+  display: inside;
+  margin-right: 5px;
+  margin-bottom: 8px;
+  padding: 3px 8px;
+  text-decoration: none;
+  border: 1px solid $background-color;
+  border-radius: $border-radius;
+  background-color: mix(#fff, #4D5357, 20%);
+  font-family: $sans-serif;
+  color: #FAFAFA;
+
+  &:hover {
+    text-decoration: none;
+    color: mix(#fff, #4D5357, 80%);
   }
 }
 
