--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -346,7 +346,7 @@ body {
   text-decoration: none;
   border: 1px solid $background-color;
   border-radius: $border-radius;
-  background-color: #4D5357;
+  background-color: #81BEF7;
   font-family: $sans-serif;
   color: #FAFAFA;
 
@@ -364,7 +364,7 @@ body {
   text-decoration: none;
   border: 1px solid $background-color;
   border-radius: $border-radius;
-  background-color: mix(#fff, #4D5357, 20%);
+  background-color: #2E9AFE;
   font-family: $sans-serif;
   color: #FAFAFA;
 
