--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -116,43 +116,6 @@
       }
     }
   }
-
-  /* next/previous buttons */
-  &--pager {
-    display: block;
-    padding: 1em 2em;
-    float: left;
-    width: 50%;
-    font-family: $sans-serif;
-    font-size: $type-size-5;
-    font-weight: bold;
-    text-align: center;
-    text-decoration: none;
-    color: $muted-text-color;
-    border: 1px solid mix(#000, $border-color, 25%);
-    border-radius: $border-radius;
-
-    &:hover {
-      @include yiq-contrasted($muted-text-color);
-    }
-
-    &:first-child {
-      border-top-right-radius: 0;
-      border-bottom-right-radius: 0;
-    }
-
-    &:last-child {
-      margin-left: -1px;
-      border-top-left-radius: 0;
-      border-bottom-left-radius: 0;
-    }
-
-    &.disabled {
-      color: rgba($muted-text-color, 0.5);
-      pointer-events: none;
-      cursor: not-allowed;
-    }
-  }
 }
 .pagination_prev_next {
   @include clearfix();
@@ -163,12 +126,12 @@
   &--pager {
     margin-top: 0em;
     padding-top: 0em;
-    display: block;
-    padding: 1em 2em;
+    display: -moz-box;
+    padding: 1em 1em;
     //float: left;
     width: 100%;
     font-family: $sans-serif;
-    font-size: $type-size-5;
+    font-size: $type-size-7;
     font-weight: bold;
     text-align: center;
     text-decoration: none;
@@ -178,11 +141,11 @@
 
     .prev_next {
       font-family: $sans-serif;
-      color:#A4A4A4;
+      color:#6E6E6E;
     }
 
     &:hover {
-      @include yiq-contrasted($muted-text-color);
+      @include yiq-contrasted(#58ACFA);
     }
 
     &:first-child {
