--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -36,21 +36,20 @@ classes: wide
             <p class="page__meta"><strong><i class="fas fa-fw fa-calendar-alt" aria-hidden="true"></i> {{ "Updated:" }}</strong> <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%Y.%m.%d" }}</time></p>
           {% endif %}
           {% if site.category_archive.type and page.categories[0] and site.tag_archive.type and page.tags[0] %}
-            {% include category-list.html %}{% include tag-list.html %}
+            <font size="3em">{% include category-list.html %}{% include tag-list.html %}</font>
           {% elsif site.category_archive.type and page.categories[0] %}
-            {% include category-list.html %}
+            <font size="3em">{% include category-list.html %}</font>
           {% elsif site.tag_archive.type and page.tags[0] %}
-            {% include tag-list.html %} 
+            <font size="3em">{% include tag-list.html %}</font>
           {% endif %}
         </header>
       {% endunless %}
-
       <section class="page__content" itemprop="text">
         {% if page.toc %}
           <aside class="sidebar__right {% if page.toc_sticky %}sticky{% endif %}">
             <nav class="toc">
-              <header><h4 class="nav__title"><i class="fas fa-{{ page.toc_icon | default: 'align-left' }}"></i> {{ page.toc_label | default: site.data.ui-text[site.locale].toc_label | default: "Index" }}</h4></header>
-              {% include toc.html sanitize=true html=content h_min=1 h_max=6 class="toc__menu" %}
+              <header><h4 class="nav__title"><i class="fas fa-{{ page.toc_icon | default: 'file-alt' }}"></i> {{ page.toc_label | default: site.data.ui-text[site.locale].toc_label | default: "On this page" }}</h4></header>
+              {% include toc.html sanitize=true html=content h_min=1 h_max=6 class="toc__menu" skip_no_ids=true %}
             </nav>
           </aside>
         {% endif %}
@@ -59,7 +58,7 @@ classes: wide
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
         
         <p></p>
-        <h4 class="page__meta-title"><span style="font-family:'TheJamsil5Bold'; color:#0174DF;">{{ page.categories[0] }}</span> <span style="font-family:'Cafe24Oneprettynight';">카테고리 내 다른 글 보러가기</span></h4>
+        <h4 class="page__meta-title"><span style="font-family:'TheJamsil5Bold'; color:#0174DF;">{{ page.categories[0] }}</span> <span style="font-family:'TheJamsil5Bold';">카테고리 내 다른 글 보러가기</span></h4>
         {% include post_pagination.html %}
         <p></p>
 
