--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,8 +29,8 @@ classes: wide
     <!-- 스크롤바 커스터마이징 -->
     <style> 
       ::-webkit-scrollbar{width: 12px;}
-      ::-webkit-scrollbar-track {background-color:#4b4f52; border-radius: 2px;}
-      ::-webkit-scrollbar-thumb {background-color:#5e6265; border-radius: 2px;}
+      ::-webkit-scrollbar-track {background-color:#eeeeee; border-radius: 2px;}
+      ::-webkit-scrollbar-thumb {background-color:#A9D0F5; border-radius: 2px;}
       ::-webkit-scrollbar-thumb:hover {background: #2E9AFE;}
       ::-webkit-scrollbar-button:start:decrement,::-webkit-scrollbar-button:end:increment 
       {
