--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -540,6 +540,10 @@ body {
   }
 }
 
+.utterances {
+  max-width: 100% !important;
+}
+
 /*
    Related
    ========================================================================== */
